<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/grid_normal"
    android:background="#FF44AAFF"
    tools:context="newbaking.code.develop.bizartxo.newbakingapp.ui.RecipeMainActivity">



    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv"
        android:columnCount="1"
        android:scrollbars="vertical"
        />


</GridLayout>
