<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_novideo"
    android:background="#FFFFCCFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_sdescription"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/info_description"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/backButton"
            android:text="Back to Menu"
            android:layout_weight="0.54" />-->
        <Button
            style="@style/NextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nextButton"
            android:text="Next Step"
            android:layout_weight="0.45"
            android:layout_margin="10dp"/>
    </LinearLayout>
</FrameLayout>
