<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"

    xmlns:card_view="http://schemas.android.com/apk/res-auto">


    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"



        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        android:layout_weight="0.06">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFCCFF"
            >
            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:src="@mipmap/ic_launcher"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:contentDescription="default"
                android:padding="15px"

                />

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_image"
                android:padding="5dp"

                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>