...
        android:layout_height="wrap_content"
        android:text="Steps"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvsteps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:scrollbars="vertical"
        />
    </LinearLayout>
...
